--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
 {
   "name": "opimonitor",
   "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Orange PI monitor",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/golyakov/opimonitor"
+  },
+  "bugs": {
+    "url": "https://github.com/golyakov/opimonitor/issues"
+  },
+  "main": "bin/www",
+  "engines": {
+    "node": "4",
+    "npm": "3"
+  },
   "scripts": {
+    "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "golyakov@list.ru",
   "license": "MIT",
   "dependencies": {
-    "shelljs": "0.7.0"
+    "request": "2.73.0",
+    "request-promise": "4.0.2",
+    "sequelize": "3.23.4",
+    "shelljs": "0.7.0",
+    "sqlite3": "3.1.4"
   }
 }
